更新疑问词典，关系词典

--- a/sementic_server/data/ontology/default_relation.yml
+++ b/sementic_server/data/ontology/default_relation.yml
@@ -6,7 +6,7 @@ WorkForCo:
   domain: person
   range: company
   value: 人与公司
-PersonToDouYin:
+PHasDouyin:
   domain: person
   range: douyin
   value: 人与抖音
