--- a/sementic_server/data/yml/wrong_table.yml
+++ b/sementic_server/data/yml/wrong_table.yml
@@ -19346,6 +19346,16 @@ qq好友: []
 - nagegaoozong
 - leigegaoozong
 - nagegaozhong
+哪些:
+- 那些
+- nei些
+- lei些
+- na些
+- 哪xie
+- 那xie
+- neixie
+- leixie
+- naxie
 哪些人:
 - 那些人
 - nei些人
@@ -19762,6 +19772,22 @@ qq好友: []
 - laergonggzhu
 - naergonzuo
 - laergonzuo
+哪几个:
+- 那几个
+- na几个
+- la几个
+- 哪ji个
+- 那ji个
+- naji个
+- laji个
+- 哪几ge
+- 那几ge
+- na几ge
+- la几ge
+- 哪jige
+- 那jige
+- najige
+- lajige
 哪家公司:
 - 那家公司
 - 哪家工司
@@ -56572,6 +56598,126 @@ qq好友: []
 - ji贯
 - 籍guan
 - jiguan
+籍贯所在地:
+- ji贯所在地
+- 籍guan所在地
+- jiguan所在地
+- 籍贯suo在地
+- 籍贯shuo在地
+- 籍贯suoo在地
+- 籍贯shu在地
+- ji贯suo在地
+- ji贯shuo在地
+- ji贯suoo在地
+- ji贯shu在地
+- 籍guansuo在地
+- 籍guanshuo在地
+- 籍guansuoo在地
+- 籍guanshu在地
+- jiguansuo在地
+- jiguanshuo在地
+- jiguansuoo在地
+- jiguanshu在地
+- 籍贯所zai地
+- 籍贯所zhai地
+- ji贯所zai地
+- ji贯所zhai地
+- 籍guan所zai地
+- 籍guan所zhai地
+- jiguan所zai地
+- jiguan所zhai地
+- 籍贯suozai地
+- 籍贯shuozai地
+- 籍贯suoozai地
+- 籍贯shuzai地
+- 籍贯suozhai地
+- 籍贯shuozhai地
+- 籍贯suoozhai地
+- 籍贯shuzhai地
+- ji贯suozai地
+- ji贯shuozai地
+- ji贯suoozai地
+- ji贯shuzai地
+- ji贯suozhai地
+- ji贯shuozhai地
+- ji贯suoozhai地
+- ji贯shuzhai地
+- 籍guansuozai地
+- 籍guanshuozai地
+- 籍guansuoozai地
+- 籍guanshuzai地
+- 籍guansuozhai地
+- 籍guanshuozhai地
+- 籍guansuoozhai地
+- 籍guanshuzhai地
+- jiguansuozai地
+- jiguanshuozai地
+- jiguansuoozai地
+- jiguanshuzai地
+- jiguansuozhai地
+- jiguanshuozhai地
+- jiguansuoozhai地
+- jiguanshuzhai地
+- 籍贯所在di
+- ji贯所在di
+- 籍guan所在di
+- jiguan所在di
+- 籍贯suo在di
+- 籍贯shuo在di
+- 籍贯suoo在di
+- 籍贯shu在di
+- ji贯suo在di
+- ji贯shuo在di
+- ji贯suoo在di
+- ji贯shu在di
+- 籍guansuo在di
+- 籍guanshuo在di
+- 籍guansuoo在di
+- 籍guanshu在di
+- jiguansuo在di
+- jiguanshuo在di
+- jiguansuoo在di
+- jiguanshu在di
+- 籍贯所zaidi
+- 籍贯所zhaidi
+- ji贯所zaidi
+- ji贯所zhaidi
+- 籍guan所zaidi
+- 籍guan所zhaidi
+- jiguan所zaidi
+- jiguan所zhaidi
+- 籍贯suozaidi
+- 籍贯shuozaidi
+- 籍贯suoozaidi
+- 籍贯shuzaidi
+- 籍贯suozhaidi
+- 籍贯shuozhaidi
+- 籍贯suoozhaidi
+- 籍贯shuzhaidi
+- ji贯suozaidi
+- ji贯shuozaidi
+- ji贯suoozaidi
+- ji贯shuzaidi
+- ji贯suozhaidi
+- ji贯shuozhaidi
+- ji贯suoozhaidi
+- ji贯shuzhaidi
+- 籍guansuozaidi
+- 籍guanshuozaidi
+- 籍guansuoozaidi
+- 籍guanshuzaidi
+- 籍guansuozhaidi
+- 籍guanshuozhaidi
+- 籍guansuoozhaidi
+- 籍guanshuzhaidi
+- jiguansuozaidi
+- jiguanshuozaidi
+- jiguansuoozaidi
+- jiguanshuzaidi
+- jiguansuozhaidi
+- jiguanshuozhaidi
+- jiguansuoozhaidi
+- jiguanshuzhaidi
 粉丝:
 - fen丝
 - feng丝
