--- a/sementic_server/data/yml/relation.yml
+++ b/sementic_server/data/yml/relation.yml
@@ -10,6 +10,7 @@ Ambiguous:
 - 群主
 - 持有
 - 拥有
+- 持有者
 Appear:
 - 出没
 - 滞留
@@ -187,6 +188,19 @@ PHasAddr:
 - 原籍
 - 祖居地
 - 老家的地址
+- 户口所在地
+- 户口地址
+- 户口地
+- 户籍地
+- 户籍地址
+- 籍贯所在地是
+- 藉贯所在地
+- 藉贯地有可能为
+- 祖籍地有可能为
+- 籍贯所在地
+- 籍贯所在地为
+- 祖籍所在地为
+- 祖籍所在地是
 PHasAlipay:
 - 支付宝账号
 PHasBankCard: []
@@ -196,6 +210,8 @@ PHasDouYin:
 PHasEmail:
 - 邮箱
 - 邮箱地址
+- 邮件地址
+- 邮箱号码
 PHasFixedPhone:
 - 电话号码
 - 电话
@@ -223,7 +239,30 @@ PHasTaoBao:
 PHasVehicle: []
 PHasWeChat:
 - 微信
-ParentToChild: []
+ParentToChild:
+- 次子
+- 孙女
+- 三侄女
+- 大女儿
+- 大儿子
+- 外甥女
+- 儿女
+- 闺女
+- 二女儿
+- 小外甥女
+- 子女
+- 女婿
+- 小侄女
+- 小女儿
+- 大侄女
+- 儿子
+- 女儿
+- 二儿子
+- 大外甥女
+- 小儿子
+- 侄女
+- 二侄女
+- 女人
 Partner:
 - 同伙
 - 同伙人
@@ -258,22 +297,17 @@ Relative:
 - 养母
 - 孙子
 - 表姐夫
-- 孙女
 - 婶婶
-- 三侄女
 - 亲人
 - 表姑
 - 小表弟
 - 三伯伯
 - 小表哥
-- 大女儿
 - 姨母
 - 二爹
 - 三侄子
 - 表舅
 - 大表弟
-- 大儿子
-- 外甥女
 - 小表姐
 - 二姨
 - 叔叔
@@ -284,7 +318,6 @@ Relative:
 - 侄儿
 - 妻室
 - 爱人
-- 儿女
 - 爹爹
 - 三舅
 - 小弟
@@ -293,14 +326,12 @@ Relative:
 - 大姑
 - 太奶奶
 - 老伴
-- 闺女
 - 爹地
 - 三叔叔
 - 叔父
 - 二伯伯
 - 老弟
 - 爷爷
-- 二女儿
 - 老姑
 - 三堂哥
 - 娘子
@@ -316,7 +347,6 @@ Relative:
 - 三表哥
 - 生父
 - 妻子
-- 小外甥女
 - 小伯
 - 堂妹
 - 婆娘
@@ -334,7 +364,6 @@ Relative:
 - 老哥
 - 媳妇
 - 老子
-- 子女
 - 继母
 - 爹妈
 - 二堂姐
@@ -351,13 +380,11 @@ Relative:
 - 父辈
 - 世叔
 - 阿姐
-- 女婿
 - 姑姑
 - 外婆
 - 表弟
 - 子嗣
 - 小舅
-- 小侄女
 - 曾祖母
 - 家眷
 - 亲戚
@@ -369,21 +396,17 @@ Relative:
 - 收养
 - 父亲
 - 二哥
-- 小女儿
 - 大叔
 - 老舅
-- 大侄女
 - 外祖父
 - 二表哥
 - 家室
 - 严父慈母
-- 儿子
 - 小外甥
 - 兄弟
 - 三堂弟
 - 佳偶
 - 亲家
-- 女儿
 - 兄弟
 - 阿妈
 - 上人
@@ -423,15 +446,12 @@ Relative:
 - 哥俩
 - 老两口
 - 郎舅
-- 二儿子
-- 大外甥女
 - 二舅
 - 老叔
 - 爹娘
 - 妹子
 - 汉子
 - 家人
-- 小儿子
 - 老小
 - 大爷
 - 曾祖父
@@ -482,7 +502,6 @@ Relative:
 - 兄嫂
 - 哥们儿
 - 阿弟
-- 侄女
 - 堂弟
 - 大表姐
 - 内子
@@ -526,7 +545,6 @@ Relative:
 - 大姨
 - 亲属
 - 高堂
-- 二侄女
 - 小姑
 - 三表姐
 - 人妇
@@ -540,7 +558,6 @@ Relative:
 - 姑父
 - 阿哥
 - 双亲
-- 女人
 - 近亲
 - 老公
 - 四舅
@@ -584,6 +601,7 @@ SameInternetBar:
 SamePrison:
 - 同监
 - 狱友
+- 同一个监狱
 SameRoom:
 - 姘居
 - 同住
@@ -596,6 +614,7 @@ SameRoom:
 - 同屋
 - 同宿
 - 同住舍友
+- 同户
 SameTown:
 - 父老乡亲
 - 乡亲
@@ -608,6 +627,7 @@ SameTrip:
 - 同路
 - 同车
 - 一起去
+- 同汽车
 Schoolmate:
 - 同门
 - 老师
@@ -646,6 +666,7 @@ Schoolmate:
 - 同学
 - 同室
 - 学妹
+- 校友
 SendMessageTo:
 - 发短信
 - 发简讯
