--- a/sementic_server/data/yml/relation_old.yml
+++ b/sementic_server/data/yml/relation_old.yml
@@ -1,6 +1,16 @@
+AddrWithCo: []
+AddrWithP: []
+AlipayHolder: []
+AlipayLoginWithEmail: []
+AlipayLoginWithMobileNum: []
 Ambiguous:
 - 好友
 - 成员
+- 拥有
+- 群主
+- 持有
+- 拥有
+- 持有者
 Appear:
 - 出没
 - 滞留
@@ -8,6 +18,7 @@ Appear:
 - 逗留
 - 出现
 - 驻留
+AuthorizeCo: []
 AuthorizedBy:
 - 登记机关
 - 登记单位
@@ -15,6 +26,14 @@ AuthorizedBy:
 - 登记部门
 - 注册机构
 - 登记处
+BankCardHolder: []
+BrotherOrSister:
+- 二堂哥
+- 嫂嫂
+- 哥哥
+- 姐姐
+- 弟弟
+- 妹妹
 Call:
 - 致电
 - 通电话
@@ -22,14 +41,31 @@ Call:
 - 打电话
 - 通话
 - 电话联系
-ChasAddr:
+CalledBy: []
+ChildToFatherSibling: []
+ChildToMotherSibling:
+- 舅舅
+ChildToParent:
+- 爸爸
+- 妈妈
+- 父亲
+- 母亲
+CoHasAddr:
 - 公司地址
 - 所在地
 - 地方
 - 地址
-ChasQQ:
-- 拥有
-- 拥有QQ号
+CoHasEmail: []
+CoHasEmployee: []
+CoHasFixedPhone: []
+CoHasLegalPerson: []
+CoHasMicroBlog: []
+CoHasMobileNum: []
+CoHasPlate: []
+CoHasPresident: []
+CoHasQQ: []
+CoHasVehicle: []
+CoHasWeChat: []
 Colleague:
 - 同仁
 - 共事
@@ -37,6 +73,12 @@ Colleague:
 - 工友
 - 同僚
 - 一起工作
+CousinFromFatherSide: []
+CousinFromMotherSide:
+- 表妹
+- 表哥
+- 表姐
+- 表弟
 CreateQQGroup:
 - 创建群
 - 建群
@@ -52,25 +94,155 @@ CreateQQGroup:
 - 创办群
 CreateWeChatGroup:
 - 创建的微信群
-CreatorOfQQGroup:
-- 群主
-CreatorOfWeChatGroup:
-- 群主
-DouYin_FansOf:
+DouYinFollow: []
+DouYinFollower:
 - 互粉
 - 粉丝
 - 关注
-EmailLoginAlipay:
-- null
-EmailLoginJD:
-- null
-EmailLoginTaoBao:
-- null
-Employ:
-- 雇佣
-- 雇用
-- 员工
-Friend:
+DouYinHolder: []
+DouYinLoginWithMobileNum: []
+EmailHolder: []
+EmailOfAlipayLogin: []
+EmailOfJDLogin: []
+EmailOfTaoBaoLogin: []
+EmailWithCo: []
+FatherSiblingToChild:
+- 表叔
+FixedPhoneHolder: []
+FixedPhoneWithCo: []
+GetMessageFrom: []
+HusbandToWife:
+- 老婆
+- 妻子
+IDCardDLHolder: []
+IDCardTWHolder: []
+IMEIHolder: []
+IMEIWithIMSI: []
+IMEIWithMAC: []
+IMSIBindMobileNum: []
+IMSIHolder: []
+IMSIWithIMEI: []
+JDHolder: []
+JDLoginWithEmail: []
+JDLoginWithMobileNum: []
+JoinQQGroup:
+- 加盟
+- 入伙
+- 进群
+- 群成员
+- 加群
+- 加入
+- 群成员
+JoinWeChatGroup:
+- 加入的微信群
+LegalPersonOfCo:
+- 法人
+- 法人
+- 公司的法定代表人
+- 法定代表人
+- 企业的法定代表人
+- 法定代表
+- 公司法定代表人
+- 法人代表
+- 企业法人
+- 企业法定代表人
+- 公司法人
+- 公司法人代表
+- 理事
+- 总经理
+- 副总
+- CEO
+- 执行主席
+MACHolder: []
+MACWithIMEI: []
+ManagerOfQQGroup: []
+ManagerOfWeChatGroup: []
+MicroBlogFollow: []
+MicroBlogFollower: []
+MicroBlogHolder: []
+MicroBlogLoginWithMobileNum: []
+MicroBlogWithCo: []
+MobileNumHolder: []
+MobileNumOfAlipayLogin:
+- 报到
+- 登陆
+- 录入
+- 签到
+- 记名
+- 登录
+MobileNumOfDouYinLogin: []
+MobileNumOfJDLogin: []
+MobileNumOfMicroBlogLogin: []
+MobileNumOfQQLogin: []
+MobileNumOfTaoBaoLogin: []
+MobileNumOfWeChatLogin: []
+MobileNumWithCo: []
+MobileNumWithIMSI: []
+MotherSiblingToChild: []
+PAppeared: []
+PHasAddr:
+- 出生地
+- 出生于
+- 籍贯
+- 籍贯所在地
+- 原籍
+- 祖居地
+- 老家的地址
+- 户口所在地
+- 户口地址
+- 户口地
+- 户籍地
+- 户籍地址
+- 籍贯所在地是
+- 藉贯所在地
+- 藉贯地有可能为
+- 祖籍地有可能为
+- 籍贯所在地
+- 籍贯所在地为
+- 祖籍所在地为
+- 祖籍所在地是
+PHasAlipay:
+- 支付宝账号
+PHasBankCard: []
+PHasDouYin:
+- 抖音
+- 抖音账户
+PHasEmail:
+- 邮箱
+- 邮箱地址
+- 邮件地址
+- 邮箱号码
+PHasFixedPhone:
+- 电话号码
+- 电话
+PHasIDCardDL: []
+PHasIDCardTW: []
+PHasIMEI: []
+PHasIMSI: []
+PHasJD:
+- 京东
+PHasMAC: []
+PHasMicroBlog:
+- 微博
+PHasMobileNum:
+- 手机
+PHasPlate:
+- 车主
+PHasQQ:
+- 拥有QQ号
+- QQ号为
+- QQ为
+- qq为
+PHasSSC: []
+PHasTaoBao:
+- 淘宝账户
+PHasVehicle: []
+PHasWeChat:
+- 微信
+ParentToChild: []
+Partner:
+- 同伙
+- 同伙人
 - 朋友
 - 挚友
 - 至友
@@ -79,7 +251,25 @@ Friend:
 - 故交
 - 故旧
 - 密友
-Kindred:
+PlateHolder: []
+PlateWithCo: []
+PlateWithVehicle: []
+PresidentOfCo: []
+QQFriend:
+- QQ好友
+- qq好友
+QQGroupCreator: []
+QQGroupManager: []
+QQGroupMember: []
+QQHolder: []
+QQLoginWithMobileNum: []
+QQWithCo: []
+QRemarkedByT: []
+RegisterPlace:
+- 注册地址
+- 注册地
+RegisterPlaceWithCo: []
+Relative:
 - 养父
 - 养母
 - 孙子
@@ -129,7 +319,6 @@ Kindred:
 - 二女儿
 - 老姑
 - 三堂哥
-- 舅舅
 - 娘子
 - 三堂姐
 - 大伯
@@ -187,8 +376,6 @@ Kindred:
 - 小侄女
 - 曾祖母
 - 家眷
-- 表妹
-- 老婆
 - 亲戚
 - 老伯
 - 老姐
@@ -336,9 +523,6 @@ Kindred:
 - 幺姨
 - 二伯
 - 堂叔
-- 二堂哥
-- 嫂嫂
-- 哥哥
 - 生母
 - 手足
 - 奶奶
@@ -354,7 +538,6 @@ Kindred:
 - 长姐
 - 祖母
 - 二老
-- 爸爸
 - 姊姊
 - 大姨
 - 亲属
@@ -385,109 +568,10 @@ Kindred:
 - 父兄
 - 表嫂
 - 哥
-LegalPerson:
-- 法人
-- 公司的法定代表人
-- 法定代表人
-- 企业的法定代表人
-- 法定代表
-- 公司法定代表人
-- 法人代表
-- 企业法人
-- 企业法定代表人
-- 公司法人
-- 公司法人代表
-Manager:
-- 理事
-- 总经理
-- 副总
-- CEO
-- 执行主席
-MemberOfQQGroup:
-- 加盟
-- 入伙
-- 进群
-- 群成员
-- 加群
-- 加入
-MemberOfWeChatGroup:
-- 群成员
-- 加入的微信群
-MicroBlog_FansOf:
-- null
-MobileNumLoginAlipay:
-- null
-MobileNumLoginDouYin:
-- null
-MobileNumLoginJD:
-- null
-MobileNumLoginMicroBlog:
-- null
-MobileNumLoginQQ:
-- null
-MobileNumLoginTaoBao:
-- null
-MobileNumLoginWeChat:
-- 报到
-- 登陆
-- 录入
-- 签到
-- 记名
-- 登录
-Partner:
-- 同伙
-- 同伙人
-PhasAddr:
+Reside:
 - 家庭住址
 - 家庭地址
 - 住址
-PhasAlipay:
-- 支付宝
-PhasBirthPlace:
-- 出生地
-- 出生于
-PhasDouYin:
-- 抖音
-PhasEmail:
-- 邮箱
-- 邮箱地址
-PhasJD:
-- 京东
-PhasMicroBlog:
-- 微博
-PhasMobileNum:
-- 手机号
-PhasOrgPlace:
-- 籍贯
-- 原籍
-- 祖居地
-- 老家的地址
-PhasQQ:
-- 持有
-- 拥有
-- 拥有QQ号
-- QQ号
-- qq号
-- QQ账号
-PhasTaoBao:
-- 淘宝
-PhasVehicle:
-- 汽车
-PhasVehicleCard:
-- 车牌号
-- 车牌
-PhasWeChat:
-- 微信
-QQFriend:
-- QQ好友
-- qq好友
-RegisterPlace:
-- 注册地址
-- 注册地
-Remark:
-- 备注
-- 通讯录
-Reside:
 - 居住
 - 住进
 - 住在
@@ -500,6 +584,8 @@ Reside:
 - 投宿
 - 租房住在
 - 租房居住
+Resident: []
+SSCHolder: []
 SameCase:
 - 同案人
 - 同案
@@ -538,7 +624,7 @@ SameTrip:
 - 同路
 - 同车
 - 一起去
-SchoolMate:
+Schoolmate:
 - 同门
 - 老师
 - 幼儿园老师
@@ -583,15 +669,34 @@ SendMessageTo:
 - 发短息
 - 发消息
 - 发信息
+TRemarkQ: []
+TRemarkT: []
+TRemarkedByT: []
+TaoBaoHolder: []
+TaoBaoLoginWithEmail: []
+TaoBaoLoginWithMobileNum: []
+VehicleHolder: []
+VehicleWithCo: []
+VehicleWithPlate: []
 WeChatFriend:
 - 微信好友
-WeChatJoinWeChatGroup:
-- null
+WeChatGroupCreator: []
+WeChatGroupManager: []
+WeChatGroupMember: []
+WeChatHolder: []
+WeChatLoginWithMobileNum: []
+WeChatWithCo: []
+WifeToHusband:
+- 丈夫
+- 老公
+- 老伴
 WorkAt:
 - 工作地址
-WorkFor:
-- 哪里工作
 - 工作
-- 上班
 - 工作单位
-- 的公司
+WorkForCo:
+- 上班
+- 雇佣
+- 雇用
+- 员工
+Worker: []
