修复实体丢失问题

--- a/sementic_server/data/ontology/amb_rel_resolution.yml
+++ b/sementic_server/data/ontology/amb_rel_resolution.yml
@@ -14,3 +14,13 @@
 - PHasMicroBlog
 - PHasMobileNum
 - PHasWeChat
+登录:
+- EmailOfJDLogin
+- EmailOfAlipayLogin
+- EmailOfTaoBaoLogin
+地址:
+- PHasAddr
+- CoHasAddr
+email地址:
+- CoHasEmail
+- PHasEmail
