--- a/sementic_server/data/ontology/v_property_mentions.yml
+++ b/sementic_server/data/ontology/v_property_mentions.yml
@@ -68,6 +68,7 @@ Ambiguous:
 - 开户时间
 28:
 - 归属地
+- 手机归属地
 35:
 - 微信内部ID
 37:
@@ -114,6 +115,7 @@ Ambiguous:
 - 统一信用代码
 157:
 - 网站
+- 网站地址
 17:
 - 职业
 4:
