--- a/sementic_server/data/yml/wrong_table.yml
+++ b/sementic_server/data/yml/wrong_table.yml
@@ -3,6 +3,7 @@ QQ为: []
 QQ号为: []
 QQ好友: []
 call: []
+email地址: []
 qq为: []
 qq好友: []
 一起去:
@@ -16859,6 +16860,27 @@ qq好友: []
 - 出xian
 - chuxian
 - cuxian
+出生:
+- chu生
+- cu生
+- 出sheng
+- 出seng
+- 出shengg
+- 出seg
+- 出shen
+- 出se
+- chusheng
+- cusheng
+- chuseng
+- cuseng
+- chushengg
+- cushengg
+- chuseg
+- cuseg
+- chushen
+- cushen
+- chuse
+- cuse
 出生于:
 - chu生于
 - cu生于
@@ -17783,6 +17805,70 @@ qq好友: []
 - 合zhu
 - hezu
 - hezhu
+同一个监狱:
+- tong一个监狱
+- tongg一个监狱
+- ton一个监狱
+- 同yi个监狱
+- tongyi个监狱
+- tonggyi个监狱
+- tonyi个监狱
+- 同一ge监狱
+- tong一ge监狱
+- tongg一ge监狱
+- ton一ge监狱
+- 同yige监狱
+- tongyige监狱
+- tonggyige监狱
+- tonyige监狱
+- 同一个jian狱
+- tong一个jian狱
+- tongg一个jian狱
+- ton一个jian狱
+- 同yi个jian狱
+- tongyi个jian狱
+- tonggyi个jian狱
+- tonyi个jian狱
+- 同一gejian狱
+- tong一gejian狱
+- tongg一gejian狱
+- ton一gejian狱
+- 同yigejian狱
+- tongyigejian狱
+- tonggyigejian狱
+- tonyigejian狱
+- 同一个监yu
+- tong一个监yu
+- tongg一个监yu
+- ton一个监yu
+- 同yi个监yu
+- tongyi个监yu
+- tonggyi个监yu
+- tonyi个监yu
+- 同一ge监yu
+- tong一ge监yu
+- tongg一ge监yu
+- ton一ge监yu
+- 同yige监yu
+- tongyige监yu
+- tonggyige监yu
+- tonyige监yu
+- 同一个jianyu
+- tong一个jianyu
+- tongg一个jianyu
+- ton一个jianyu
+- 同yi个jianyu
+- tongyi个jianyu
+- tonggyi个jianyu
+- tonyi个jianyu
+- 同一gejianyu
+- tong一gejianyu
+- tongg一gejianyu
+- ton一gejianyu
+- 同yigejianyu
+- tongyigejianyu
+- tonggyigejianyu
+- tonyigejianyu
 同乡:
 - tong乡
 - tongg乡
@@ -18021,6 +18107,14 @@ qq好友: []
 - tongwu
 - tonggwu
 - tonwu
+同户:
+- tong户
+- tongg户
+- ton户
+- 同hu
+- tonghu
+- tongghu
+- tonhu
 同校:
 - tong校
 - tongg校
@@ -18103,6 +18197,32 @@ qq好友: []
 - tonggzhuoo
 - tonzhuo
 - tonzhuo
+同汽车:
+- tong汽车
+- tongg汽车
+- ton汽车
+- 同qi车
+- tongqi车
+- tonggqi车
+- tonqi车
+- 同汽che
+- 同汽ce
+- tong汽che
+- tongg汽che
+- ton汽che
+- tong汽ce
+- ton汽ce
+- tongg汽ce
+- ton汽che
+- 同qiche
+- 同qice
+- tongqiche
+- tonggqiche
+- tonqiche
+- tongqice
+- tonqice
+- tonggqice
+- tonqiche
 同游:
 - tong游
 - tongg游
@@ -21278,10 +21398,6 @@ qq好友: []
 - dizijiaoseme
 - dizhijiaooseme
 - dizijiaooseme
-地方:
-- di方
-- 地fang
-- difang
 堂兄:
 - tang兄
 - 堂xiong
@@ -24258,6 +24374,198 @@ qq好友: []
 - 孩zhi
 - haizi
 - haizhi
+官方的电邮地址:
+- guan方的电邮地址
+- 官fang的电邮地址
+- guanfang的电邮地址
+- 官方de电邮地址
+- guan方de电邮地址
+- 官fangde电邮地址
+- guanfangde电邮地址
+- 官方的dian邮地址
+- guan方的dian邮地址
+- 官fang的dian邮地址
+- guanfang的dian邮地址
+- 官方dedian邮地址
+- guan方dedian邮地址
+- 官fangdedian邮地址
+- guanfangdedian邮地址
+- 官方的电you地址
+- guan方的电you地址
+- 官fang的电you地址
+- guanfang的电you地址
+- 官方de电you地址
+- guan方de电you地址
+- 官fangde电you地址
+- guanfangde电you地址
+- 官方的dianyou地址
+- guan方的dianyou地址
+- 官fang的dianyou地址
+- guanfang的dianyou地址
+- 官方dedianyou地址
+- guan方dedianyou地址
+- 官fangdedianyou地址
+- guanfangdedianyou地址
+- 官方的电邮di址
+- guan方的电邮di址
+- 官fang的电邮di址
+- guanfang的电邮di址
+- 官方de电邮di址
+- guan方de电邮di址
+- 官fangde电邮di址
+- guanfangde电邮di址
+- 官方的dian邮di址
+- guan方的dian邮di址
+- 官fang的dian邮di址
+- guanfang的dian邮di址
+- 官方dedian邮di址
+- guan方dedian邮di址
+- 官fangdedian邮di址
+- guanfangdedian邮di址
+- 官方的电youdi址
+- guan方的电youdi址
+- 官fang的电youdi址
+- guanfang的电youdi址
+- 官方de电youdi址
+- guan方de电youdi址
+- 官fangde电youdi址
+- guanfangde电youdi址
+- 官方的dianyoudi址
+- guan方的dianyoudi址
+- 官fang的dianyoudi址
+- guanfang的dianyoudi址
+- 官方dedianyoudi址
+- guan方dedianyoudi址
+- 官fangdedianyoudi址
+- guanfangdedianyoudi址
+- 官方的电邮地zhi
+- 官方的电邮地zi
+- guan方的电邮地zhi
+- guan方的电邮地zi
+- 官fang的电邮地zhi
+- 官fang的电邮地zi
+- guanfang的电邮地zhi
+- guanfang的电邮地zi
+- 官方de电邮地zhi
+- 官方de电邮地zi
+- guan方de电邮地zhi
+- guan方de电邮地zi
+- 官fangde电邮地zhi
+- 官fangde电邮地zi
+- guanfangde电邮地zhi
+- guanfangde电邮地zi
+- 官方的dian邮地zhi
+- 官方的dian邮地zi
+- guan方的dian邮地zhi
+- guan方的dian邮地zi
+- 官fang的dian邮地zhi
+- 官fang的dian邮地zi
+- guanfang的dian邮地zhi
+- guanfang的dian邮地zi
+- 官方dedian邮地zhi
+- 官方dedian邮地zi
+- guan方dedian邮地zhi
+- guan方dedian邮地zi
+- 官fangdedian邮地zhi
+- 官fangdedian邮地zi
+- guanfangdedian邮地zhi
+- guanfangdedian邮地zi
+- 官方的电you地zhi
+- 官方的电you地zi
+- guan方的电you地zhi
+- guan方的电you地zi
+- 官fang的电you地zhi
+- 官fang的电you地zi
+- guanfang的电you地zhi
+- guanfang的电you地zi
+- 官方de电you地zhi
+- 官方de电you地zi
+- guan方de电you地zhi
+- guan方de电you地zi
+- 官fangde电you地zhi
+- 官fangde电you地zi
+- guanfangde电you地zhi
+- guanfangde电you地zi
+- 官方的dianyou地zhi
+- 官方的dianyou地zi
+- guan方的dianyou地zhi
+- guan方的dianyou地zi
+- 官fang的dianyou地zhi
+- 官fang的dianyou地zi
+- guanfang的dianyou地zhi
+- guanfang的dianyou地zi
+- 官方dedianyou地zhi
+- 官方dedianyou地zi
+- guan方dedianyou地zhi
+- guan方dedianyou地zi
+- 官fangdedianyou地zhi
+- 官fangdedianyou地zi
+- guanfangdedianyou地zhi
+- guanfangdedianyou地zi
+- 官方的电邮dizhi
+- 官方的电邮dizi
+- guan方的电邮dizhi
+- guan方的电邮dizi
+- 官fang的电邮dizhi
+- 官fang的电邮dizi
+- guanfang的电邮dizhi
+- guanfang的电邮dizi
+- 官方de电邮dizhi
+- 官方de电邮dizi
+- guan方de电邮dizhi
+- guan方de电邮dizi
+- 官fangde电邮dizhi
+- 官fangde电邮dizi
+- guanfangde电邮dizhi
+- guanfangde电邮dizi
+- 官方的dian邮dizhi
+- 官方的dian邮dizi
+- guan方的dian邮dizhi
+- guan方的dian邮dizi
+- 官fang的dian邮dizhi
+- 官fang的dian邮dizi
+- guanfang的dian邮dizhi
+- guanfang的dian邮dizi
+- 官方dedian邮dizhi
+- 官方dedian邮dizi
+- guan方dedian邮dizhi
+- guan方dedian邮dizi
+- 官fangdedian邮dizhi
+- 官fangdedian邮dizi
+- guanfangdedian邮dizhi
+- guanfangdedian邮dizi
+- 官方的电youdizhi
+- 官方的电youdizi
+- guan方的电youdizhi
+- guan方的电youdizi
+- 官fang的电youdizhi
+- 官fang的电youdizi
+- guanfang的电youdizhi
+- guanfang的电youdizi
+- 官方de电youdizhi
+- 官方de电youdizi
+- guan方de电youdizhi
+- guan方de电youdizi
+- 官fangde电youdizhi
+- 官fangde电youdizi
+- guanfangde电youdizhi
+- guanfangde电youdizi
+- 官方的dianyoudizhi
+- 官方的dianyoudizi
+- guan方的dianyoudizhi
+- guan方的dianyoudizi
+- 官fang的dianyoudizhi
+- 官fang的dianyoudizi
+- guanfang的dianyoudizhi
+- guanfang的dianyoudizi
+- 官方dedianyoudizhi
+- 官方dedianyoudizi
+- guan方dedianyoudizhi
+- guan方dedianyoudizi
+- 官fangdedianyoudizhi
+- 官fangdedianyoudizi
+- guanfangdedianyoudizhi
+- guanfangdedianyoudizi
 定居:
 - ding居
 - dingg居
@@ -54282,12 +54590,6 @@ qq好友: []
 - di弟
 - 弟di
 - didi
-录入:
-- lu入
-- nu入
-- 录ru
-- luru
-- nuru
 微信:
 - wei信
 - 微xin
@@ -54673,6 +54975,222 @@ qq好友: []
 - 手ji
 - shouji
 - souji
+手机物理地址:
+- shou机物理地址
+- sou机物理地址
+- 手ji物理地址
+- shouji物理地址
+- souji物理地址
+- 手机wu理地址
+- shou机wu理地址
+- sou机wu理地址
+- 手jiwu理地址
+- shoujiwu理地址
+- soujiwu理地址
+- 手机物li地址
+- 手机物ni地址
+- shou机物li地址
+- sou机物li地址
+- shou机物ni地址
+- sou机物ni地址
+- 手ji物li地址
+- 手ji物ni地址
+- shouji物li地址
+- souji物li地址
+- shouji物ni地址
+- souji物ni地址
+- 手机wuli地址
+- 手机wuni地址
+- shou机wuli地址
+- sou机wuli地址
+- shou机wuni地址
+- sou机wuni地址
+- 手jiwuli地址
+- 手jiwuni地址
+- shoujiwuli地址
+- soujiwuli地址
+- shoujiwuni地址
+- soujiwuni地址
+- 手机物理di址
+- shou机物理di址
+- sou机物理di址
+- 手ji物理di址
+- shouji物理di址
+- souji物理di址
+- 手机wu理di址
+- shou机wu理di址
+- sou机wu理di址
+- 手jiwu理di址
+- shoujiwu理di址
+- soujiwu理di址
+- 手机物lidi址
+- 手机物nidi址
+- shou机物lidi址
+- sou机物lidi址
+- shou机物nidi址
+- sou机物nidi址
+- 手ji物lidi址
+- 手ji物nidi址
+- shouji物lidi址
+- souji物lidi址
+- shouji物nidi址
+- souji物nidi址
+- 手机wulidi址
+- 手机wunidi址
+- shou机wulidi址
+- sou机wulidi址
+- shou机wunidi址
+- sou机wunidi址
+- 手jiwulidi址
+- 手jiwunidi址
+- shoujiwulidi址
+- soujiwulidi址
+- shoujiwunidi址
+- soujiwunidi址
+- 手机物理地zhi
+- 手机物理地zi
+- shou机物理地zhi
+- sou机物理地zhi
+- shou机物理地zi
+- sou机物理地zi
+- 手ji物理地zhi
+- 手ji物理地zi
+- shouji物理地zhi
+- souji物理地zhi
+- shouji物理地zi
+- souji物理地zi
+- 手机wu理地zhi
+- 手机wu理地zi
+- shou机wu理地zhi
+- sou机wu理地zhi
+- shou机wu理地zi
+- sou机wu理地zi
+- 手jiwu理地zhi
+- 手jiwu理地zi
+- shoujiwu理地zhi
+- soujiwu理地zhi
+- shoujiwu理地zi
+- soujiwu理地zi
+- 手机物li地zhi
+- 手机物ni地zhi
+- 手机物li地zi
+- 手机物ni地zi
+- shou机物li地zhi
+- sou机物li地zhi
+- shou机物ni地zhi
+- sou机物ni地zhi
+- shou机物li地zi
+- sou机物li地zi
+- shou机物ni地zi
+- sou机物ni地zi
+- 手ji物li地zhi
+- 手ji物ni地zhi
+- 手ji物li地zi
+- 手ji物ni地zi
+- shouji物li地zhi
+- souji物li地zhi
+- shouji物ni地zhi
+- souji物ni地zhi
+- shouji物li地zi
+- souji物li地zi
+- shouji物ni地zi
+- souji物ni地zi
+- 手机wuli地zhi
+- 手机wuni地zhi
+- 手机wuli地zi
+- 手机wuni地zi
+- shou机wuli地zhi
+- sou机wuli地zhi
+- shou机wuni地zhi
+- sou机wuni地zhi
+- shou机wuli地zi
+- sou机wuli地zi
+- shou机wuni地zi
+- sou机wuni地zi
+- 手jiwuli地zhi
+- 手jiwuni地zhi
+- 手jiwuli地zi
+- 手jiwuni地zi
+- shoujiwuli地zhi
+- soujiwuli地zhi
+- shoujiwuni地zhi
+- soujiwuni地zhi
+- shoujiwuli地zi
+- soujiwuli地zi
+- shoujiwuni地zi
+- soujiwuni地zi
+- 手机物理dizhi
+- 手机物理dizi
+- shou机物理dizhi
+- sou机物理dizhi
+- shou机物理dizi
+- sou机物理dizi
+- 手ji物理dizhi
+- 手ji物理dizi
+- shouji物理dizhi
+- souji物理dizhi
+- shouji物理dizi
+- souji物理dizi
+- 手机wu理dizhi
+- 手机wu理dizi
+- shou机wu理dizhi
+- sou机wu理dizhi
+- shou机wu理dizi
+- sou机wu理dizi
+- 手jiwu理dizhi
+- 手jiwu理dizi
+- shoujiwu理dizhi
+- soujiwu理dizhi
+- shoujiwu理dizi
+- soujiwu理dizi
+- 手机物lidizhi
+- 手机物nidizhi
+- 手机物lidizi
+- 手机物nidizi
+- shou机物lidizhi
+- sou机物lidizhi
+- shou机物nidizhi
+- sou机物nidizhi
+- shou机物lidizi
+- sou机物lidizi
+- shou机物nidizi
+- sou机物nidizi
+- 手ji物lidizhi
+- 手ji物nidizhi
+- 手ji物lidizi
+- 手ji物nidizi
+- shouji物lidizhi
+- souji物lidizhi
+- shouji物nidizhi
+- souji物nidizhi
+- shouji物lidizi
+- souji物lidizi
+- shouji物nidizi
+- souji物nidizi
+- 手机wulidizhi
+- 手机wunidizhi
+- 手机wulidizi
+- 手机wunidizi
+- shou机wulidizhi
+- sou机wulidizhi
+- shou机wunidizhi
+- sou机wunidizhi
+- shou机wulidizi
+- sou机wulidizi
+- shou机wunidizi
+- sou机wunidizi
+- 手jiwulidizhi
+- 手jiwunidizhi
+- 手jiwulidizi
+- 手jiwunidizi
+- shoujiwulidizhi
+- soujiwulidizhi
+- shoujiwunidizhi
+- soujiwunidizhi
+- shoujiwulidizi
+- soujiwulidizi
+- shoujiwunidizi
+- soujiwunidizi
 手足:
 - shou足
 - sou足
@@ -54783,14 +55301,6 @@ qq好友: []
 - baoodao
 - baodaoo
 - baoodaoo
-拥有:
-- yong有
-- yongg有
-- yon有
-- 拥you
-- yongyou
-- yonggyou
-- yonyou
 拥有QQ号: []
 持有:
 - chi有
@@ -56197,6 +56707,14 @@ qq好友: []
 - den录
 - denlu
 - denlu
+登记:
+- deng记
+- dengg记
+- den记
+- 登ji
+- dengji
+- denggji
+- denji
 登记单位:
 - deng记单位
 - dengg记单位
@@ -61891,6 +62409,30 @@ qq好友: []
 - 邮xiangdizi
 - youxiangdizhi
 - youxiangdizi
+邮箱账户:
+- you箱账户
+- 邮xiang账户
+- youxiang账户
+- 邮箱zhang户
+- 邮箱zang户
+- you箱zhang户
+- you箱zang户
+- 邮xiangzhang户
+- 邮xiangzang户
+- youxiangzhang户
+- youxiangzang户
+- 邮箱账hu
+- you箱账hu
+- 邮xiang账hu
+- youxiang账hu
+- 邮箱zhanghu
+- 邮箱zanghu
+- you箱zhanghu
+- you箱zanghu
+- 邮xiangzhanghu
+- 邮xiangzanghu
+- youxiangzhanghu
+- youxiangzanghu
 郎舅:
 - lang舅
 - nang舅
