--- a/sementic_server/data/yml/relation.yml
+++ b/sementic_server/data/yml/relation.yml
@@ -4,13 +4,18 @@ AlipayHolder: []
 AlipayLoginWithEmail: []
 AlipayLoginWithMobileNum: []
 Ambiguous:
+- email地址
+- 地址
 - 好友
 - 成员
-- 拥有
 - 群主
 - 持有
-- 拥有
 - 持有者
+- 报到
+- 登陆
+- 签到
+- 记名
+- 登录
 Appear:
 - 出没
 - 滞留
@@ -26,6 +31,7 @@ AuthorizedBy:
 - 登记部门
 - 注册机构
 - 登记处
+- 登记
 BankCardHolder: []
 BrotherOrSister:
 - 二堂哥
@@ -53,9 +59,8 @@ ChildToParent:
 CoHasAddr:
 - 公司地址
 - 所在地
-- 地方
-- 地址
-CoHasEmail: []
+CoHasEmail:
+- 官方的电邮地址
 CoHasEmployee: []
 CoHasFixedPhone: []
 CoHasLegalPerson: []
@@ -119,7 +124,8 @@ IDCardTWHolder: []
 IMEIHolder: []
 IMEIWithIMSI: []
 IMEIWithMAC: []
-IMSIBindMobileNum: []
+IMSIBindMobileNum:
+- 手机物理地址
 IMSIHolder: []
 IMSIWithIMEI: []
 JDHolder: []
@@ -163,13 +169,7 @@ MicroBlogHolder: []
 MicroBlogLoginWithMobileNum: []
 MicroBlogWithCo: []
 MobileNumHolder: []
-MobileNumOfAlipayLogin:
-- 报到
-- 登陆
-- 录入
-- 签到
-- 记名
-- 登录
+MobileNumOfAlipayLogin: []
 MobileNumOfDouYinLogin: []
 MobileNumOfJDLogin: []
 MobileNumOfMicroBlogLogin: []
@@ -182,6 +182,7 @@ MotherSiblingToChild: []
 PAppeared: []
 PHasAddr:
 - 出生地
+- 出生
 - 出生于
 - 籍贯
 - 籍贯所在地
@@ -212,6 +213,7 @@ PHasEmail:
 - 邮箱地址
 - 邮件地址
 - 邮箱号码
+- 邮箱账户
 PHasFixedPhone:
 - 电话号码
 - 电话
