住在西善桥北路89号的18526439876的在华为上班的同学是谁

--- a/sementic_server/data/ontology/default_relation.yml
+++ b/sementic_server/data/ontology/default_relation.yml
@@ -24,7 +24,7 @@ PHasWeChat:
   value: 拥有微信
 PHasMobileNum:
   domain: person
-  range: mob_num
+  range: mobilenum
   value: 拥有手机
 AddrWithP:
   domain: addr
