--- a/sementic_server/data/ontology/default_relation.yml
+++ b/sementic_server/data/ontology/default_relation.yml
@@ -74,3 +74,7 @@ PHasIMEI:
   domain: person
   range: imei
   value: 人和imei
+CoHasFixedPhone:
+  domain: company
+  range: fixedphonenumber
+  value: 公司座机
