群主 管理员

--- a/sementic_server/data/ontology/amb_rel_resolution.yml
+++ b/sementic_server/data/ontology/amb_rel_resolution.yml
@@ -24,3 +24,15 @@
 email地址:
 - CoHasEmail
 - PHasEmail
+加入:
+- WeChatGroupMember
+- QQGroupMember
+管理员:
+- ManagerOfQQGroup
+- ManagerOfWeChatGroup
+群管理:
+- ManagerOfQQGroup
+- ManagerOfWeChatGroup
+群主:
+- ManagerOfQQGroup
+- ManagerOfWeChatGroup
