--- a/sementic_server/data/ontology/object_attribute.yml
+++ b/sementic_server/data/ontology/object_attribute.yml
@@ -304,3 +304,11 @@ IMSIBindMobileNum:
   belong: false
   domain: imsi
   range: mobilenum
+ManagerOfQQGroup:
+  belong: false
+  domain: qqgroup
+  range: qq
+ManagerOfWeChatGroup:
+  belong: false
+  domain: wechat
+  range: wechatgroup
