--- a/sementic_server/data/yml/wrong_table.yml
+++ b/sementic_server/data/yml/wrong_table.yml
@@ -17231,6 +17231,7 @@ qq好友: []
 - fuzon
 - fuzongg
 - fuzon
+加了哪几个QQ群: []
 加入:
 - jia入
 - 加ru
@@ -17299,6 +17300,7 @@ qq好友: []
 - jia入deweixinqun
 - 加rudeweixinqun
 - jiarudeweixinqun
+加的QQ群: []
 加盟:
 - jia盟
 - 加meng
