--- a/sementic_server/data/yml/wrong_table.yml
+++ b/sementic_server/data/yml/wrong_table.yml
@@ -5933,6 +5933,330 @@ qq好友: []
 - zuzai
 - zhuzhai
 - zuzhai
+住在一家旅社:
+- zhu在一家旅社
+- zu在一家旅社
+- 住zai一家旅社
+- 住zhai一家旅社
+- zhuzai一家旅社
+- zuzai一家旅社
+- zhuzhai一家旅社
+- zuzhai一家旅社
+- 住在yi家旅社
+- zhu在yi家旅社
+- zu在yi家旅社
+- 住zaiyi家旅社
+- 住zhaiyi家旅社
+- zhuzaiyi家旅社
+- zuzaiyi家旅社
+- zhuzhaiyi家旅社
+- zuzhaiyi家旅社
+- 住在一jia旅社
+- zhu在一jia旅社
+- zu在一jia旅社
+- 住zai一jia旅社
+- 住zhai一jia旅社
+- zhuzai一jia旅社
+- zuzai一jia旅社
+- zhuzhai一jia旅社
+- zuzhai一jia旅社
+- 住在yijia旅社
+- zhu在yijia旅社
+- zu在yijia旅社
+- 住zaiyijia旅社
+- 住zhaiyijia旅社
+- zhuzaiyijia旅社
+- zuzaiyijia旅社
+- zhuzhaiyijia旅社
+- zuzhaiyijia旅社
+- 住在一家lv社
+- 住在一家nv社
+- zhu在一家lv社
+- zu在一家lv社
+- zhu在一家nv社
+- zu在一家nv社
+- 住zai一家lv社
+- 住zhai一家lv社
+- 住zai一家nv社
+- 住zhai一家nv社
+- zhuzai一家lv社
+- zuzai一家lv社
+- zhuzhai一家lv社
+- zuzhai一家lv社
+- zhuzai一家nv社
+- zuzai一家nv社
+- zhuzhai一家nv社
+- zuzhai一家nv社
+- 住在yi家lv社
+- 住在yi家nv社
+- zhu在yi家lv社
+- zu在yi家lv社
+- zhu在yi家nv社
+- zu在yi家nv社
+- 住zaiyi家lv社
+- 住zhaiyi家lv社
+- 住zaiyi家nv社
+- 住zhaiyi家nv社
+- zhuzaiyi家lv社
+- zuzaiyi家lv社
+- zhuzhaiyi家lv社
+- zuzhaiyi家lv社
+- zhuzaiyi家nv社
+- zuzaiyi家nv社
+- zhuzhaiyi家nv社
+- zuzhaiyi家nv社
+- 住在一jialv社
+- 住在一jianv社
+- zhu在一jialv社
+- zu在一jialv社
+- zhu在一jianv社
+- zu在一jianv社
+- 住zai一jialv社
+- 住zhai一jialv社
+- 住zai一jianv社
+- 住zhai一jianv社
+- zhuzai一jialv社
+- zuzai一jialv社
+- zhuzhai一jialv社
+- zuzhai一jialv社
+- zhuzai一jianv社
+- zuzai一jianv社
+- zhuzhai一jianv社
+- zuzhai一jianv社
+- 住在yijialv社
+- 住在yijianv社
+- zhu在yijialv社
+- zu在yijialv社
+- zhu在yijianv社
+- zu在yijianv社
+- 住zaiyijialv社
+- 住zhaiyijialv社
+- 住zaiyijianv社
+- 住zhaiyijianv社
+- zhuzaiyijialv社
+- zuzaiyijialv社
+- zhuzhaiyijialv社
+- zuzhaiyijialv社
+- zhuzaiyijianv社
+- zuzaiyijianv社
+- zhuzhaiyijianv社
+- zuzhaiyijianv社
+- 住在一家旅she
+- 住在一家旅se
+- zhu在一家旅she
+- zu在一家旅she
+- zhu在一家旅se
+- zu在一家旅se
+- 住zai一家旅she
+- 住zhai一家旅she
+- 住zai一家旅se
+- 住zhai一家旅se
+- zhuzai一家旅she
+- zuzai一家旅she
+- zhuzhai一家旅she
+- zuzhai一家旅she
+- zhuzai一家旅se
+- zuzai一家旅se
+- zhuzhai一家旅se
+- zuzhai一家旅se
+- 住在yi家旅she
+- 住在yi家旅se
+- zhu在yi家旅she
+- zu在yi家旅she
+- zhu在yi家旅se
+- zu在yi家旅se
+- 住zaiyi家旅she
+- 住zhaiyi家旅she
+- 住zaiyi家旅se
+- 住zhaiyi家旅se
+- zhuzaiyi家旅she
+- zuzaiyi家旅she
+- zhuzhaiyi家旅she
+- zuzhaiyi家旅she
+- zhuzaiyi家旅se
+- zuzaiyi家旅se
+- zhuzhaiyi家旅se
+- zuzhaiyi家旅se
+- 住在一jia旅she
+- 住在一jia旅se
+- zhu在一jia旅she
+- zu在一jia旅she
+- zhu在一jia旅se
+- zu在一jia旅se
+- 住zai一jia旅she
+- 住zhai一jia旅she
+- 住zai一jia旅se
+- 住zhai一jia旅se
+- zhuzai一jia旅she
+- zuzai一jia旅she
+- zhuzhai一jia旅she
+- zuzhai一jia旅she
+- zhuzai一jia旅se
+- zuzai一jia旅se
+- zhuzhai一jia旅se
+- zuzhai一jia旅se
+- 住在yijia旅she
+- 住在yijia旅se
+- zhu在yijia旅she
+- zu在yijia旅she
+- zhu在yijia旅se
+- zu在yijia旅se
+- 住zaiyijia旅she
+- 住zhaiyijia旅she
+- 住zaiyijia旅se
+- 住zhaiyijia旅se
+- zhuzaiyijia旅she
+- zuzaiyijia旅she
+- zhuzhaiyijia旅she
+- zuzhaiyijia旅she
+- zhuzaiyijia旅se
+- zuzaiyijia旅se
+- zhuzhaiyijia旅se
+- zuzhaiyijia旅se
+- 住在一家lvshe
+- 住在一家nvshe
+- 住在一家lvse
+- 住在一家nvse
+- zhu在一家lvshe
+- zu在一家lvshe
+- zhu在一家nvshe
+- zu在一家nvshe
+- zhu在一家lvse
+- zu在一家lvse
+- zhu在一家nvse
+- zu在一家nvse
+- 住zai一家lvshe
+- 住zhai一家lvshe
+- 住zai一家nvshe
+- 住zhai一家nvshe
+- 住zai一家lvse
+- 住zhai一家lvse
+- 住zai一家nvse
+- 住zhai一家nvse
+- zhuzai一家lvshe
+- zuzai一家lvshe
+- zhuzhai一家lvshe
+- zuzhai一家lvshe
+- zhuzai一家nvshe
+- zuzai一家nvshe
+- zhuzhai一家nvshe
+- zuzhai一家nvshe
+- zhuzai一家lvse
+- zuzai一家lvse
+- zhuzhai一家lvse
+- zuzhai一家lvse
+- zhuzai一家nvse
+- zuzai一家nvse
+- zhuzhai一家nvse
+- zuzhai一家nvse
+- 住在yi家lvshe
+- 住在yi家nvshe
+- 住在yi家lvse
+- 住在yi家nvse
+- zhu在yi家lvshe
+- zu在yi家lvshe
+- zhu在yi家nvshe
+- zu在yi家nvshe
+- zhu在yi家lvse
+- zu在yi家lvse
+- zhu在yi家nvse
+- zu在yi家nvse
+- 住zaiyi家lvshe
+- 住zhaiyi家lvshe
+- 住zaiyi家nvshe
+- 住zhaiyi家nvshe
+- 住zaiyi家lvse
+- 住zhaiyi家lvse
+- 住zaiyi家nvse
+- 住zhaiyi家nvse
+- zhuzaiyi家lvshe
+- zuzaiyi家lvshe
+- zhuzhaiyi家lvshe
+- zuzhaiyi家lvshe
+- zhuzaiyi家nvshe
+- zuzaiyi家nvshe
+- zhuzhaiyi家nvshe
+- zuzhaiyi家nvshe
+- zhuzaiyi家lvse
+- zuzaiyi家lvse
+- zhuzhaiyi家lvse
+- zuzhaiyi家lvse
+- zhuzaiyi家nvse
+- zuzaiyi家nvse
+- zhuzhaiyi家nvse
+- zuzhaiyi家nvse
+- 住在一jialvshe
+- 住在一jianvshe
+- 住在一jialvse
+- 住在一jianvse
+- zhu在一jialvshe
+- zu在一jialvshe
+- zhu在一jianvshe
+- zu在一jianvshe
+- zhu在一jialvse
+- zu在一jialvse
+- zhu在一jianvse
+- zu在一jianvse
+- 住zai一jialvshe
+- 住zhai一jialvshe
+- 住zai一jianvshe
+- 住zhai一jianvshe
+- 住zai一jialvse
+- 住zhai一jialvse
+- 住zai一jianvse
+- 住zhai一jianvse
+- zhuzai一jialvshe
+- zuzai一jialvshe
+- zhuzhai一jialvshe
+- zuzhai一jialvshe
+- zhuzai一jianvshe
+- zuzai一jianvshe
+- zhuzhai一jianvshe
+- zuzhai一jianvshe
+- zhuzai一jialvse
+- zuzai一jialvse
+- zhuzhai一jialvse
+- zuzhai一jialvse
+- zhuzai一jianvse
+- zuzai一jianvse
+- zhuzhai一jianvse
+- zuzhai一jianvse
+- 住在yijialvshe
+- 住在yijianvshe
+- 住在yijialvse
+- 住在yijianvse
+- zhu在yijialvshe
+- zu在yijialvshe
+- zhu在yijianvshe
+- zu在yijianvshe
+- zhu在yijialvse
+- zu在yijialvse
+- zhu在yijianvse
+- zu在yijianvse
+- 住zaiyijialvshe
+- 住zhaiyijialvshe
+- 住zaiyijianvshe
+- 住zhaiyijianvshe
+- 住zaiyijialvse
+- 住zhaiyijialvse
+- 住zaiyijianvse
+- 住zhaiyijianvse
+- zhuzaiyijialvshe
+- zuzaiyijialvshe
+- zhuzhaiyijialvshe
+- zuzhaiyijialvshe
+- zhuzaiyijianvshe
+- zuzaiyijianvshe
+- zhuzhaiyijianvshe
+- zuzhaiyijianvshe
+- zhuzaiyijialvse
+- zuzaiyijialvse
+- zhuzhaiyijialvse
+- zuzhaiyijialvse
+- zhuzaiyijianvse
+- zuzaiyijianvse
+- zhuzhaiyijianvse
+- zuzhaiyijianvse
 住在什么地方:
 - 住在啥地方
 - zhu在什么地方
@@ -17001,6 +17325,24 @@ qq好友: []
 - 创jian
 - chuangjian
 - cuangjian
+创建人:
+- chuang建人
+- cuang建人
+- 创jian人
+- chuangjian人
+- cuangjian人
+- 创建ren
+- 创建reng
+- chuang建ren
+- cuang建ren
+- chuang建reng
+- cuang建reng
+- 创jianren
+- 创jianreng
+- chuangjianren
+- cuangjianren
+- chuangjianreng
+- cuangjianreng
 创建的微信群:
 - chuang建的微信群
 - cuang建的微信群
@@ -17871,6 +18213,70 @@ qq好友: []
 - tongyigejianyu
 - tonggyigejianyu
 - tonyigejianyu
+同一家网吧:
+- tong一家网吧
+- tongg一家网吧
+- ton一家网吧
+- 同yi家网吧
+- tongyi家网吧
+- tonggyi家网吧
+- tonyi家网吧
+- 同一jia网吧
+- tong一jia网吧
+- tongg一jia网吧
+- ton一jia网吧
+- 同yijia网吧
+- tongyijia网吧
+- tonggyijia网吧
+- tonyijia网吧
+- 同一家wang吧
+- tong一家wang吧
+- tongg一家wang吧
+- ton一家wang吧
+- 同yi家wang吧
+- tongyi家wang吧
+- tonggyi家wang吧
+- tonyi家wang吧
+- 同一jiawang吧
+- tong一jiawang吧
+- tongg一jiawang吧
+- ton一jiawang吧
+- 同yijiawang吧
+- tongyijiawang吧
+- tonggyijiawang吧
+- tonyijiawang吧
+- 同一家网ba
+- tong一家网ba
+- tongg一家网ba
+- ton一家网ba
+- 同yi家网ba
+- tongyi家网ba
+- tonggyi家网ba
+- tonyi家网ba
+- 同一jia网ba
+- tong一jia网ba
+- tongg一jia网ba
+- ton一jia网ba
+- 同yijia网ba
+- tongyijia网ba
+- tonggyijia网ba
+- tonyijia网ba
+- 同一家wangba
+- tong一家wangba
+- tongg一家wangba
+- ton一家wangba
+- 同yi家wangba
+- tongyi家wangba
+- tonggyi家wangba
+- tonyi家wangba
+- 同一jiawangba
+- tong一jiawangba
+- tongg一jiawangba
+- ton一jiawangba
+- 同yijiawangba
+- tongyijiawangba
+- tonggyijiawangba
+- tonyijiawangba
 同乡:
 - tong乡
 - tongg乡
@@ -55294,15 +55700,6 @@ qq好友: []
 - douyingzhanghu
 - douyinzanghu
 - douyingzanghu
-报到:
-- bao到
-- baoo到
-- 报dao
-- 报daoo
-- baodao
-- baoodao
-- baodaoo
-- baoodaoo
 拥有QQ号: []
 持有:
 - chi有
@@ -55971,6 +56368,54 @@ qq好友: []
 - 汉zhi
 - hanzi
 - hanzhi
+汽车同行:
+- qi车同行
+- 汽che同行
+- 汽ce同行
+- qiche同行
+- qice同行
+- 汽车tong行
+- 汽车tongg行
+- 汽车ton行
+- qi车tong行
+- qi车tongg行
+- qi车ton行
+- 汽chetong行
+- 汽cetong行
+- 汽chetongg行
+- 汽cetongg行
+- 汽cheton行
+- 汽ceton行
+- qichetong行
+- qicetong行
+- qichetongg行
+- qicetongg行
+- qicheton行
+- qiceton行
+- 汽车同hang
+- qi车同hang
+- 汽che同hang
+- 汽ce同hang
+- qiche同hang
+- qice同hang
+- 汽车tonghang
+- 汽车tongghang
+- 汽车tonhang
+- qi车tonghang
+- qi车tongghang
+- qi车tonhang
+- 汽chetonghang
+- 汽cetonghang
+- 汽chetongghang
+- 汽cetongghang
+- 汽chetonhang
+- 汽cetonhang
+- qichetonghang
+- qicetonghang
+- qichetongghang
+- qicetongghang
+- qichetonhang
+- qicetonhang
 法人:
 - fa人
 - 法ren
@@ -56400,6 +56845,78 @@ qq好友: []
 - ziliu
 - zhiniu
 - ziniu
+火车同行:
+- huo车同行
+- huoo车同行
+- 火che同行
+- 火ce同行
+- huoche同行
+- huooche同行
+- huoce同行
+- huooce同行
+- 火车tong行
+- 火车tongg行
+- 火车ton行
+- huo车tong行
+- huoo车tong行
+- huo车tongg行
+- huoo车tongg行
+- huo车ton行
+- huoo车ton行
+- 火chetong行
+- 火cetong行
+- 火chetongg行
+- 火cetongg行
+- 火cheton行
+- 火ceton行
+- huochetong行
+- huoochetong行
+- huocetong行
+- huoocetong行
+- huochetongg行
+- huoochetongg行
+- huocetongg行
+- huoocetongg行
+- huocheton行
+- huoocheton行
+- huoceton行
+- huooceton行
+- 火车同hang
+- huo车同hang
+- huoo车同hang
+- 火che同hang
+- 火ce同hang
+- huoche同hang
+- huooche同hang
+- huoce同hang
+- huooce同hang
+- 火车tonghang
+- 火车tongghang
+- 火车tonhang
+- huo车tonghang
+- huoo车tonghang
+- huo车tongghang
+- huoo车tongghang
+- huo车tonhang
+- huoo车tonhang
+- 火chetonghang
+- 火cetonghang
+- 火chetongghang
+- 火cetongghang
+- 火chetonhang
+- 火cetonhang
+- huochetonghang
+- huoochetonghang
+- huocetonghang
+- huoocetonghang
+- huochetongghang
+- huoochetongghang
+- huocetongghang
+- huoocetongghang
+- huochetonhang
+- huoochetonhang
+- huocetonhang
+- huoocetonhang
 爱人:
 - ai人
 - 爱ren
@@ -59179,12 +59696,18 @@ qq好友: []
 - zhufangjuzhu
 - zufangjuzu
 - zhufangjuzu
-签到:
-- qian到
-- 签dao
-- 签daoo
-- qiandao
-- qiandaoo
+管理员:
+- guan理员
+- 管li员
+- 管ni员
+- guanli员
+- guanni员
+- 管理yuan
+- guan理yuan
+- 管liyuan
+- 管niyuan
+- guanliyuan
+- guanniyuan
 籍贯:
 - ji贯
 - 籍guan
@@ -60016,6 +60539,18 @@ qq好友: []
 - quncegyuan
 - qunchenyuan
 - qunceyuan
+群管理:
+- qun管理
+- 群guan理
+- qunguan理
+- 群管li
+- 群管ni
+- qun管li
+- qun管ni
+- 群guanli
+- 群guanni
+- qunguanli
+- qunguanni
 老丈人:
 - lao丈人
 - nao丈人
@@ -60759,6 +61294,38 @@ qq好友: []
 - 舍you
 - sheyou
 - seyou
+航班同行:
+- hang班同行
+- 航ban同行
+- hangban同行
+- 航班tong行
+- 航班tongg行
+- 航班ton行
+- hang班tong行
+- hang班tongg行
+- hang班ton行
+- 航bantong行
+- 航bantongg行
+- 航banton行
+- hangbantong行
+- hangbantongg行
+- hangbanton行
+- 航班同hang
+- hang班同hang
+- 航ban同hang
+- hangban同hang
+- 航班tonghang
+- 航班tongghang
+- 航班tonhang
+- hang班tonghang
+- hang班tongghang
+- hang班tonhang
+- 航bantonghang
+- 航bantongghang
+- 航bantonhang
+- hangbantonghang
+- hangbantongghang
+- hangbantonhang
 藉贯地有可能为:
 - ji贯地有可能为
 - 藉guan地有可能为
@@ -61561,14 +62128,6 @@ qq好友: []
 - 表jiu
 - biaojiu
 - biaoojiu
-记名:
-- ji名
-- 记ming
-- 记mingg
-- 记min
-- jiming
-- jimingg
-- jimin
 谁是:
 - shei是
 - sei是
