关注 粉丝 未测

--- a/sementic_server/data/ontology/amb_rel_resolution.yml
+++ b/sementic_server/data/ontology/amb_rel_resolution.yml
@@ -58,3 +58,9 @@ email地址:
 创建者:
 - CreateQQGroup
 - CreateWeChatGroup
+关注:
+- DouYinFollow
+- MicroBlogFollow
+粉丝:
+- DouYinFollower
+- MicroBlogFollower
