--- a/sementic_server/data/yml/wrong_table.yml
+++ b/sementic_server/data/yml/wrong_table.yml
@@ -17439,18 +17439,24 @@ qq好友: []
 - 创jiandeweixinqun
 - chuangjiandeweixinqun
 - cuangjiandeweixinqun
-创建群:
-- chuang建群
-- cuang建群
-- 创jian群
-- chuangjian群
-- cuangjian群
-- 创建qun
-- chuang建qun
-- cuang建qun
-- 创jianqun
-- chuangjianqun
-- cuangjianqun
+创建者:
+- chuang建者
+- cuang建者
+- 创jian者
+- chuangjian者
+- cuangjian者
+- 创建zhe
+- 创建ze
+- chuang建zhe
+- cuang建zhe
+- chuang建ze
+- cuang建ze
+- 创jianzhe
+- 创jianze
+- chuangjianzhe
+- cuangjianzhe
+- chuangjianze
+- cuangjianze
 创立群:
 - chuang立群
 - cuang立群
@@ -18639,6 +18645,47 @@ qq好友: []
 - tongyou
 - tonggyou
 - tonyou
+同火车:
+- tong火车
+- tongg火车
+- ton火车
+- 同huo车
+- 同huoo车
+- tonghuo车
+- tongghuo车
+- tonhuo车
+- tonghuoo车
+- tonhuoo车
+- tongghuoo车
+- tonhuo车
+- 同火che
+- 同火ce
+- tong火che
+- tongg火che
+- ton火che
+- tong火ce
+- ton火ce
+- tongg火ce
+- ton火che
+- 同huoche
+- 同huooche
+- 同huoce
+- 同huooce
+- tonghuoche
+- tongghuoche
+- tonhuoche
+- tonghuooche
+- tonhuooche
+- tongghuooche
+- tonhuoche
+- tonghuoce
+- tonhuoce
+- tongghuoce
+- tonhuoche
+- tonghuooce
+- tonhuooce
+- tongghuooce
+- tonhuoche
 同班:
 - tong班
 - tongg班
@@ -54974,10 +55021,6 @@ qq好友: []
 - 建niqun
 - jianliqun
 - jianniqun
-建群:
-- jian群
-- 建qun
-- jianqun
 开房:
 - kai房
 - 开fang
