--- a/sementic_server/data/yml/relation.yml
+++ b/sementic_server/data/yml/relation.yml
@@ -8,6 +8,8 @@ Ambiguous:
 - 管理员
 - 群管理
 - 加入
+- 关注
+- 粉丝
 - email地址
 - 地址
 - 好友
@@ -18,6 +20,8 @@ Ambiguous:
 - 登陆
 - 登录
 - 创建人
+- 创建者
+- 创建
 Appear:
 - 出没
 - 滞留
@@ -87,9 +91,6 @@ CousinFromMotherSide:
 - 表姐
 - 表弟
 CreateQQGroup:
-- 创建群
-- 建群
-- 创建
 - 邀进群
 - 邀请进群
 - 创始群
